test/expressions/diten/uintOctalOverflow.good
error: uintOctalOverflow.chpl:1: Integer literal overflow: '0o2000000000000000000000' is too big for type uint64
